feat: add mysql, sqlserver, oracle

--- a/conf/mysql.yml
+++ b/conf/mysql.yml
@@ -2,7 +2,7 @@ db:
   type: mysql
   host: localhost
   port: 3306
-  schema: ami_mom_xiexin
+  schema: mom_mdm
   username: root
   password: root
 
