--- a/conf/oracle.yml
+++ b/conf/oracle.yml
@@ -1,8 +1,8 @@
 db:
   type: oracle
-  host: 10.252.79.25
+  host: 192.168.101.148
   port: 1521
-  schema: ORCLPDB1
-  username: EOLANE_MOM_YUJIE
-  password: EOLANE_MOM_YUJIE
+  schema: ORCL
+  username: root
+  password: root
 
