--- a/conf/sqlserver.yml
+++ b/conf/sqlserver.yml
@@ -1,7 +1,7 @@
 db:
   type: sqlserver
-  host: 192.168.80.92
+  host: localhost
   port: 1433
-  schema: wms
-  username: sa
-  password: mJwms#2022
+  schema: test
+  username: root
+  password: root
